--- a/index.css
+++ b/index.css
@@ -47,3 +47,59 @@ h2 {
   line-height: 150%;
   margin-bottom: 32px;
 }
+
+.botao{
+  background-color: #FF725E;
+  border-radius: 8px;
+  color: #FFF;
+  text-decoration: none;
+  padding: 16px 32px;
+}
+
+.botao_transparente{
+  background-color: transparent;
+  color: #FF725E;
+  padding: 16px 32px;
+  text-underline-offset: 4px;
+}
+
+.absolute{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: -10;
+}
+
+#clinica{
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  padding: 64px 80px;
+}
+
+#clinica li{
+  margin-bottom: 16px;
+  margin-left: 32px;
+}
+
+#farmacia{
+  padding: 64px 80px;
+  text-align: center;
+}
+
+#farmacia img{
+  margin: 64px auto;
+}
+
+#farmacia .paragrafo{
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+#duvidas{
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  padding: 64px 80px;
+}
