--- a/index.css
+++ b/index.css
@@ -103,3 +103,71 @@ h2 {
   gap: 64px;
   padding: 64px 80px;
 }
+
+.duvida{
+  position: relative;
+}
+
+.duvida h3{
+  border: 2px solid #FF725E;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 24px;
+}
+
+.duvida img{
+  position: absolute;
+  top: 32px;
+  right: 24px;
+}
+
+.duvida .paragrafo{
+  border-right: 1px solid #FF725E;
+  border-bottom: 1px solid #FF725E;
+  border-left: 1px solid #FF725E;
+  border-radius: 0 0 8px 8px;
+  margin-top: -8px;
+  padding: 24px;
+}
+
+footer{
+  background-color: rgba(255, 152, 108, 0.25);
+  display: flex;
+  gap: 80px;
+  padding: 64px 80px;
+}
+
+footer img,
+footer .titulo{
+  display: block;
+  font-weight: 600;
+  margin-bottom: 24px; 
+}
+
+footer nav a{
+  color: #263138;
+  display: block;
+  margin-bottom: 16px;
+  text-decoration: none;
+  max-width: 350px;
+}
+
+footer p{
+  margin-bottom: 16px;
+}
+
+footer p a{
+  color: #263138;
+  text-decoration: none;
+}
+
+#copy{
+  background-color: #263138;
+  text-align: center;
+  padding: 24px;
+  color: #FFFF;
+}
+
+#copy a{
+  color: #FF9A6C;
+}
