--- a/index.css
+++ b/index.css
@@ -132,6 +132,7 @@ h2 {
 
 footer{
   background-color: rgba(255, 152, 108, 0.25);
+  justify-content: space-between;
   display: flex;
   gap: 80px;
   padding: 64px 80px;
